cmake_minimum_required(VERSION 3.13)


PROJECT(HELLO)

ADD_SUBDIRECTORY(test lib)
SET(SRC_LIST test_Point.cpp)

INCLUDE_DIRECTORIES(${HELLO_SOURCE_DIR}/includetest)
INCLUDE_DIRECTORIES(${HELLO_SOURCE_DIR}/test)


ADD_EXECUTABLE(hello ${SRC_LIST})

MESSAGE(STATUS "This is lib dir ${HELLO_BINARY_DIR}/lib")

LINK_DIRECTORIES(${HELLO_BINARY_DIR}/lib)
TARGET_LINK_LIBRARIES(hello point)