cmake_minimum_required(VERSION 3.13)


MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
MESSAGE(STATUS "This is SOURCE LIST " ${SRC_LIST})
# SOURCE FILE LIST
SET(SRC_LIST Point.cpp)

# INCLUDE HEAD FILES

INCLUDE_DIRECTORIES(${HELLO_SOURCE_DIR}/includetest)
INCLUDE_DIRECTORIES(${HELLO_SOURCE_DIR}/test)

ADD_LIBRARY(point SHARED ${SRC_LIST})

